Bug 300335 - Brush refuses to increase it size via shorcut key
Summary: Brush refuses to increase it size via shorcut key
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 2.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-19 20:20 UTC by eduardelriceam
Modified: 2012-09-29 11:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description eduardelriceam 2012-05-19 20:20:39 UTC
The brush refuses to increase it size after it goes bellow 0.5 (i changed the  shorcuts to D and F mypaint style) using the pencil_shade_texture  brush

Reproducible: Always

Steps to Reproduce:
1. Open Krita
2. Create a new document
3. Changing the increase and decrease shotcuts
4. Pick Pencil_Shade_Texture
5. Decrease it size to less than 0.8 via shorcut
6. Try to increase it's size via shorcut
Actual Results:  
Brush didn't increase it's size once it goes bellow 0.8

Expected Results:  
Increase it size

resha@Elizabeth:~/Games$ krita
krita(25770)/kdecore (KLibrary) kde4Factory: The library "/usr/lib/kde4/kritahistorydocker.so" does not offer a qt_plugin_instance function.
krita(25770)/koffice (lib kopageapp) KoOdfLoadingContext::KoOdfLoadingContext: could not parse manifest document 
krita(25770)/koffice (lib store): KoStore: You must open before reading 

krita(25770)/koffice (lib store): KoStore: You must open before reading 

krita(25770)/koffice (lib store) KoStore::close: You must open before closing 
QObject::connect: Cannot connect (null)::sigImageModified() to KisDoc2::setModified()
krita(25770)/kdeui (KAction) KActionCollection::setComponentData: this does not work on a KActionCollection containing actions! 
krita(25770)/krita (general) KisWeakSharedPtr<T>::operator->: "[
0: /usr/lib/libkdecore.so.5(kRealBacktrace(int)+0x45) [0xb60e2b25]
1: /usr/lib/libkritaui.so.9(KisOpenGLImageTextures::imageCanShareTextures(KisWeakSharedPtr<KisImage>)+0x4e) [0xae93e2de]
2: /usr/lib/libkritaui.so.9(KisOpenGLImageTextures::getImageTextures(KisWeakSharedPtr<KisImage>, KoColorProfile*)+0x58) [0xae9418e8]
3: /usr/lib/libkritaui.so.9(KisCanvas2::createOpenGLCanvas()+0x4a) [0xae7fa27a]
4: /usr/lib/libkritaui.so.9(KisCanvas2::createCanvas(bool)+0x188) [0xae7fa528]
5: /usr/lib/libkritaui.so.9(KisCanvas2::KisCanvas2(KisCoordinatesConverter*, KisView2*, KoShapeBasedDocumentBase*)+0x12d) [0xae7fa78d]
6: /usr/lib/libkritaui.so.9(KisView2::KisView2(KisDoc2*, QWidget*)+0x3b0) [0xae8f8620]
7: /usr/lib/libkritaui.so.9(KisDoc2::createViewInstance(QWidget*)+0x68) [0xae87b658]
8: /usr/lib/libkomain.so.9(KoDocument::createView(QWidget*)+0x22) [0xb7231f02]
9: /usr/lib/libkomain.so.9(KoMainWindow::setRootDocument(KoDocument*)+0x491) [0xb7266961]
10: /usr/lib/libkomain.so.9(KoDocument::deleteOpenPane(bool)+0x8a) [0xb7238d0a]
11: /usr/lib/libkomain.so.9(KoDocument::openFile()+0x10d1) [0xb723cf11]
12: /usr/lib/libkparts.so.4(+0x1d10e) [0xb5c0810e]
13: /usr/lib/libkparts.so.4(KParts::ReadOnlyPart::openUrl(KUrl const&)+0x175) [0xb5c087b5]
14: /usr/lib/libkomain.so.9(KoDocument::openUrl(KUrl const&)+0x5d8) [0xb72411a8]
15: /usr/lib/libkomain.so.9(KoDocument::openExistingFile(KUrl const&)+0x18) [0xb7230c78]
16: /usr/lib/libkritaui.so.9(KisDoc2::openExistingFile(KUrl const&)+0x4e) [0xae87b43e]
17: /usr/lib/libkritaui.so.9(+0x1537ca) [0xae87d7ca]
18: /usr/lib/i386-linux-gnu/libQtCore.so.4(QMetaObject::activate(QObject*, QMetaObject const*, int, void**)+0x241) [0xb5eb16b1]
19: /usr/lib/libkomain.so.9(+0xce715) [0xb72ac715]
20: /usr/lib/i386-linux-gnu/libQtCore.so.4(QMetaObject::activate(QObject*, QMetaObject const*, int, void**)+0x241) [0xb5eb16b1]
21: /usr/lib/libkomain.so.9(+0xccab5) [0xb72aaab5]
22: /usr/lib/libkomain.so.9(+0xd1c8f) [0xb72afc8f]
23: /usr/lib/libkomain.so.9(+0xcc75b) [0xb72aa75b]
24: /usr/lib/libkomain.so.9(+0xd1a0b) [0xb72afa0b]
25: /usr/lib/libkomain.so.9(+0xccb83) [0xb72aab83]
26: /usr/lib/i386-linux-gnu/libQtCore.so.4(QMetaObject::activate(QObject*, QMetaObject const*, int, void**)+0x241) [0xb5eb16b1]
27: /usr/lib/i386-linux-gnu/libQtGui.so.4(QAbstractButton::clicked(bool)+0x4d) [0xb6b3a96d]
28: /usr/lib/i386-linux-gnu/libQtGui.so.4(+0x56661d) [0xb682e61d]
29: /usr/lib/i386-linux-gnu/libQtGui.so.4(+0x567c8b) [0xb682fc8b]
30: /usr/lib/i386-linux-gnu/libQtGui.so.4(QAbstractButton::mouseReleaseEvent(QMouseEvent*)+0xa6) [0xb682ff46]
31: /usr/lib/i386-linux-gnu/libQtGui.so.4(QWidget::event(QEvent*)+0x40c) [0xb645d1ac]
32: /usr/lib/i386-linux-gnu/libQtGui.so.4(QAbstractButton::event(QEvent*)+0x69) [0xb682f1e9]
33: /usr/lib/i386-linux-gnu/libQtGui.so.4(QPushButton::event(QEvent*)+0x48) [0xb68d2758]
34: /usr/lib/i386-linux-gnu/libQtGui.so.4(QApplicationPrivate::notify_helper(QObject*, QEvent*)+0xc4) [0xb6402ed4]
35: /usr/lib/i386-linux-gnu/libQtGui.so.4(QApplication::notify(QObject*, QEvent*)+0xea4) [0xb6409024]
36: /usr/lib/libkdeui.so.5(KApplication::notify(QObject*, QEvent*)+0x41) [0xb6f87b21]
37: /usr/lib/i386-linux-gnu/libQtCore.so.4(QCoreApplication::notifyInternal(QObject*, QEvent*)+0x8e) [0xb5e9a97e]
38: /usr/lib/i386-linux-gnu/libQtGui.so.4(QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool)+0x115) [0xb6403e95]
39: /usr/lib/i386-linux-gnu/libQtGui.so.4(+0x1c8074) [0xb6490074]
40: /usr/lib/i386-linux-gnu/libQtGui.so.4(QApplication::x11ProcessEvent(_XEvent*)+0xb8d) [0xb648ec0d]
41: /usr/lib/i386-linux-gnu/libQtGui.so.4(+0x1f4a88) [0xb64bca88]
42: /usr/lib/i386-linux-gnu/libQtCore.so.4(QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)+0x4d) [0xb5e9950d]
43: /usr/lib/i386-linux-gnu/libQtCore.so.4(QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)+0xf9) [0xb5e997a9]
44: /usr/lib/i386-linux-gnu/libQtCore.so.4(QCoreApplication::exec()+0x9a) [0xb5e9eeba]
45: /usr/lib/i386-linux-gnu/libQtGui.so.4(QApplication::exec()+0x24) [0xb6400a74]
46: /usr/lib/kde4/libkdeinit/libkdeinit4_krita.so(kdemain+0x251) [0xb759b571]
47: krita() [0x804850b]
48: /lib/i386-linux-gnu/libc.so.6(__libc_start_main+0xf3) [0xb73584d3]
49: krita() [0x8048531]
]
" 
KCrash: Application 'krita' crashing...
KCrash: Attempting to start /usr/lib/kde4/libexec/drkonqi from kdeinit
sock_file=/home/resha/.kde/socket-Elizabeth/kdeinit4__0

[1]+  Stopped                 krita
resha@Elizabeth:~/Games$ QSocketNotifier: Invalid socket 28 and type 'Read', disabling...
QSocketNotifier: Invalid socket 38 and type 'Read', disabling...
resha@Elizabeth:~/Games$ krita

(krita:26938): Gtk-WARNING **: Unable to locate theme engine in module_path: "equinox",

(krita:26938): Gtk-WARNING **: Unable to locate theme engine in module_path: "equinox",

(krita:26938): Gtk-WARNING **: Unable to locate theme engine in module_path: "equinox",

(krita:26938): Gtk-WARNING **: Unable to locate theme engine in module_path: "equinox",

(krita:26938): Gtk-WARNING **: Unable to locate theme engine in module_path: "equinox",
krita(26938)/kdecore (KLibrary) kde4Factory: The library "/usr/lib/kde4/kritahistorydocker.so" does not offer a qt_plugin_instance function.
krita(26938)/koffice (lib kopageapp) KoOdfLoadingContext::KoOdfLoadingContext: could not parse manifest document 
krita(26938)/krita (tiles) KisMementoManager::commit: Named Transaction is empty 
krita(26938)/krita (tiles) KisMementoManager::commit: Named Transaction is empty 
krita(26938)/krita (tiles) KisMementoManager::commit: Named Transaction is empty 
krita(26938)/krita (tiles) KisMementoManager::commit: Named Transaction is empty 
krita(26938)/krita (tiles) KisMementoManager::commit: Named Transaction is empty 
krita(26938)/krita (tiles) KisMementoManager::commit: Named Transaction is empty 
krita(26938)/krita (tiles) KisMementoManager::commit: Named Transaction is empty 
krita(26938)/krita (tiles) KisMementoManager::commit: Named Transaction is empty 
krita(26938)/krita (tiles) KisMementoManager::commit: Named Transaction is empty 
krita(26938)/krita (tiles) KisMementoManager::commit: Named Transaction is empty 
krita(26938)/krita (tiles) KisMementoManager::commit: Named Transaction is empty 
krita(26938)/kdeui (KAction) KActionCollection::setComponentData: this does not work on a KActionCollection containing actions! 
connect failed: No such file or directory
QMetaObject::invokeMethod: No such method KoToolBox::1update()()
QMetaObject::invokeMethod: No such method KoToolBox::1update()()
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action 
QVariantMap DBusMenuExporterDBus::getProperties(int, const QStringList&) const: Condition failed: action
Comment 1 Halla Rempt 2012-05-19 20:27:33 UTC
Hi!

Thanks for your report. I can still reproduce in git master, so we need to fix this :-).
Comment 2 Sven Langkamp 2012-07-13 23:36:05 UTC
Is this still reproduceable? Works here.
Comment 3 Halla Rempt 2012-09-29 10:38:36 UTC
I can still reproduce: it is specific for this predefined brush mask, it looks like.
Comment 4 Halla Rempt 2012-09-29 11:10:06 UTC
Git commit d73dcb47ea7132a16238dee94daa09ffd93b8f50 by Boudewijn Rempt.
Committed on 29/09/2012 at 13:09.
Pushed by rempt into branch 'master'.

Make sure that if we increase brush size, it gets increased

Some predefined brushes have a default size that gives very small
increments. These increments then don't get added because the brush
size slider only handles two decimals.

M  +22   -14   krita/plugins/paintops/libpaintop/kis_brush_chooser.cpp
M  +4    -4    krita/ui/widgets/kis_multipliers_double_slider_spinbox.cpp

http://commits.kde.org/calligra/d73dcb47ea7132a16238dee94daa09ffd93b8f50
Comment 5 Halla Rempt 2012-09-29 11:11:00 UTC
Git commit 65305dc2f77b0ec9c876b90b05425b4fb8080d5a by Boudewijn Rempt.
Committed on 29/09/2012 at 13:09.
Pushed by rempt into branch 'calligra/2.5'.

Make sure that if we increase brush size, it gets increased

Some predefined brushes have a default size that gives very small
increments. These increments then don't get added because the brush
size slider only handles two decimals.

M  +22   -14   krita/plugins/paintops/libpaintop/kis_brush_chooser.cpp
M  +4    -4    krita/ui/widgets/kis_multipliers_double_slider_spinbox.cpp

http://commits.kde.org/calligra/65305dc2f77b0ec9c876b90b05425b4fb8080d5a