Make sure that if we increase brush size, it gets increased

Some predefined brushes have a default size that gives very small
increments. These increments then don't get added because the brush
size slider only handles two decimals.

BUG:300335