krita/ui/widgets/kis_multipliers_double_slider_spinbox.cpp
@@ -21,6 +21,8 @@
 
 #include "ui_wdgmultipliersdoublesliderspinbox.h"
 
+#include "kis_debug.h"
+
 struct KisMultipliersDoubleSliderSpinBox::Private {
     qreal currentMultiplier();
     /// Update the range of the slider depending on the currentMultiplier
@@ -77,11 +79,9 @@ qreal KisMultipliersDoubleSliderSpinBox::value()
 
 void KisMultipliersDoubleSliderSpinBox::setValue(qreal value)
 {
-    for(int i = 0; i < d->form.comboBox->count(); ++i)
-    {
+    for(int i = 0; i < d->form.comboBox->count(); ++i) {
         qreal m = d->form.comboBox->itemData(i).toDouble();
-        if(value >= m * d->min && value <= m * d->max)
-        {
+        if (value >= m * d->min && value <= m * d->max) {
             d->form.comboBox->setCurrentIndex(i);
             d->updateRange();
             break;
